libraries/ecc100j/lib/ecc100/ecc.h

typedef int Bln32;                              /**< Boolean compatible to older C      */
typedef int Int32;                              /**< Basic type                         */
/** @brief Reference Auto Update
 *
 *  When set, every time the reference marking is hit the reference position
 *  will be updated. When this function is disabled, the reference marking will
 *  be considered only the first time and after then ignored.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        enable/disable auto update
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return            Result of function
 */
Int32 NCB_API ECC_controlReferenceAutoUpdate( Int32 deviceHandle,
                                              Int32 axis,
                                              Bln32* enable,
                                              Bln32 set);
/** @brief Auto Reset
 *
 *  Resets the position for every time the reference position is detected.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        enables/ disable functionality
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlAutoReset( Int32 deviceHandle,
                                    Int32 axis,
                                    Bln32* enable,
                                    Bln32 set);
/** @brief Target Range
 *
 *  Defines the range around the target position in which the flag target status
 *  become active.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  range         range in nm or µ° depending on actor type.
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlTargetRange( Int32 deviceHandle,
                                      Int32 axis,
                                      Int32* range,
                                      Bln32 set);
/** @brief Target status
 *
 *  Retrieves the target status. Indicates whether the actual position is within
 *  the target range.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  target        actual position is within target range
 *  @return               Result of function
 */
Int32 NCB_API ECC_getStatusTargetRange( Int32 deviceHandle,
                                        Int32 axis,
                                        Bln32* target );
/** @brief Firmware version
 *
 *  Retrieves the version of actual firmware
 *
 *  @param  deviceHandle  Handle of device
 *  @param  version       version number
 *  @return               Result of function
 */
Int32 NCB_API ECC_getFirmwareVersion( Int32 deviceHandle,
                                      Int32* version );
/** @brief Device id
 *
 *  Sets and retrieve the device identifier. A set will save the
 *  id persistent in flash of the device.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  id            iud of the device.
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlDeviceId( Int32 deviceHandle,
                                   Int32* id,
                                   Bln32 set);
/** @brief EOT status forward
 *
 *  Retrieves the status of the end of travel (EOT) detection in forward direction.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  EotDetected   status
 *  @return               Result of function
 */
Int32 NCB_API ECC_getStatusEotFwd( Int32 deviceHandle,
                                   Int32 axis,
                                   Bln32* EotDetected);
/** @brief EOT status backward
 *
 *  Retrieves the status of the end of travel (EOT) detection in backward direction.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  EotDetected   status
 *  @return               Result of function
 */
Int32 NCB_API ECC_getStatusEotBkwd( Int32 deviceHandle,
                                    Int32 axis,
                                    Bln32* EotDetected);