ecc100j/src/ecc100/bindings/EccLibrary.java


  /**
   * @brief Reference Auto Update<br>
   *        <br>
   *        When set, every time the reference marking is hit the reference
   *        position<br>
   *        will be updated. When this function is disabled, the reference
   *        marking will<br>
   *        be considered only the first time and after then ignored.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param enable
   *          enable/disable auto update<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlReferenceAutoUpdate(Int32, Int32, Bln32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:502</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlReferenceAutoUpdate(int deviceHandle,
                                                   int axis,
                                                   Pointer<Integer> enable,
                                                   int set)
  {
    return ECC_controlReferenceAutoUpdate(deviceHandle,
                                          axis,
                                          Pointer.getPeer(enable),
                                          set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlReferenceAutoUpdate(int deviceHandle,
                                                             int axis,
                                                             @Ptr long enable,
                                                             int set);

  /**
   * @brief Auto Reset<br>
   *        <br>
   *        Resets the position for every time the reference position is
   *        detected.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param enable
   *          enables/ disable functionality<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlAutoReset(Int32, Int32, Bln32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:519</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlAutoReset(int deviceHandle,
                                         int axis,
                                         Pointer<Integer> enable,
                                         int set)
  {
    return ECC_controlAutoReset(deviceHandle,
                                axis,
                                Pointer.getPeer(enable),
                                set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlAutoReset(int deviceHandle,
                                                   int axis,
                                                   @Ptr long enable,
                                                   int set);

  /**
   * @brief Target Range<br>
   *        <br>
   *        Defines the range around the target position in which the flag
   *        target status<br>
   *        become active.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param range
   *          range in nm or \u00b5\u00b0 depending on actor type.<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlTargetRange(Int32, Int32, Int32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:537</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlTargetRange(int deviceHandle,
                                           int axis,
                                           Pointer<Integer> range,
                                           int set)
  {
    return ECC_controlTargetRange(deviceHandle,
                                  axis,
                                  Pointer.getPeer(range),
                                  set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlTargetRange(int deviceHandle,
                                                     int axis,
                                                     @Ptr long range,
                                                     int set);

  /**
   * @brief Target status<br>
   *        <br>
   *        Retrieves the target status. Indicates whether the actual position
   *        is within<br>
   *        the target range.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param target
   *          actual position is within target range<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getStatusTargetRange(Int32, Int32, Bln32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:552</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getStatusTargetRange(int deviceHandle,
                                             int axis,
                                             Pointer<Integer> target)
  {
    return ECC_getStatusTargetRange(deviceHandle,
                                    axis,
                                    Pointer.getPeer(target));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getStatusTargetRange(int deviceHandle,
                                                       int axis,
                                                       @Ptr long target);

  /**
   * @brief Firmware version<br>
   *        <br>
   *        Retrieves the version of actual firmware<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param version
   *          version number<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getFirmwareVersion(Int32, Int32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:565</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getFirmwareVersion(int deviceHandle,
                                           Pointer<Integer> version)
  {
    return ECC_getFirmwareVersion(deviceHandle,
                                  Pointer.getPeer(version));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getFirmwareVersion(int deviceHandle,
                                                     @Ptr long version);

  /**
   * @brief Device id<br>
   *        <br>
   *        Sets and retrieve the device identifier. A set will save the<br>
   *        id persistent in flash of the device.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param id
   *          iud of the device.<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlDeviceId(Int32, Int32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:580</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlDeviceId(int deviceHandle,
                                        Pointer<Integer> id,
                                        int set)
  {
    return ECC_controlDeviceId(deviceHandle,
                               Pointer.getPeer(id),
                               set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlDeviceId(int deviceHandle,
                                                  @Ptr long id,
                                                  int set);

  /**
   * @brief EOT status forward<br>
   *        <br>
   *        Retrieves the status of the end of travel (EOT) detection in forward
   *        direction.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param EotDetected
   *          status<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getStatusEotFwd(Int32, Int32, Bln32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:594</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getStatusEotFwd(int deviceHandle,
                                        int axis,
                                        Pointer<Integer> EotDetected)
  {
    return ECC_getStatusEotFwd(deviceHandle,
                               axis,
                               Pointer.getPeer(EotDetected));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getStatusEotFwd(int deviceHandle,
                                                  int axis,
                                                  @Ptr long EotDetected);

  /**
   * @brief EOT status backward<br>
   *        <br>
   *        Retrieves the status of the end of travel (EOT) detection in
   *        backward direction.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param EotDetected
   *          status<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getStatusEotBkwd(Int32, Int32, Bln32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:607</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getStatusEotBkwd(int deviceHandle,
                                         int axis,
                                         Pointer<Integer> EotDetected)
  {
    return ECC_getStatusEotBkwd(deviceHandle,
                                axis,
                                Pointer.getPeer(EotDetected));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getStatusEotBkwd(int deviceHandle,
                                                   int axis,
                                                   @Ptr long EotDetected);
